# uniprot-mcp

./: .gitignore  .pre-commit-config.yaml  Makefile  main.py  pyproject.toml  uniprot_insulin_results.json
src/uniprot_mcp/: __main__.py  cli.py  server.py  settings.py
src/uniprot_mcp/prompts/: prompts.py
src/uniprot_mcp/tools/: models.py  search_uniprot.py
src/uniprot_mcp/utils/: http.py
