[project]
name = "uniprot-mcp"
version = "0.1.0"
description = "MCP server for UniProt"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "diskcache>=5.6.3",
    "httpx>=0.27.0",
    "mcp[cli]>=1.9.2",
    "fastmcp>=2.5.2",
    "platformdirs>=4.3.6",
    "pydantic>=1.10",
    "pydantic-settings>=2.0.1",
    "typer>=0.15.2",
]

[tool.uv]
dev-dependencies = [
    "isort>=6.0.1",
    "mypy>=1.9.0",
    "pre-commit>=4.1.0",
    "pyright>=1.1.389",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov>=4.1.0",
    "ruff>=0.8.0",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
]
